# scikit-learn-jax

./: README.rst  pyproject.toml
tests/: test_scikit_learn_jax.py
