[tool.poetry]
name = "scikit-learn-jax"
version = "0.1.0"
description = "A project aiming for utilizing XLA for scikit-learn thus allowing running on GPU's and TPU's"
authors = ["Abdalaziz Rashid <abdalaziz.rashid@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.2.7"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-benchmark = "^3.2.3"
pytest-lazy-fixture = "^0.6.3"
flake8 = "^3.8.4"
pylint = "^2.6.0"
mypy = "^0.790"
black = "^20.8b1"
pre-commit = "^2.9.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
